--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "@angular/platform-browser": "7.1.0",
     "@angular/platform-browser-dynamic": "7.1.0",
     "@angular/router": "7.1.0",
-    "@nebular/theme": "^3.0.0",
+    "@nebular/bootstrap": "3.0.0",
+    "@nebular/theme": "3.0.0",
+    "bootstrap": "4.1.3",
     "core-js": "2.5.4",
-    "nebular-icons": "^1.1.0",
+    "nebular-icons": "1.1.0",
     "rxjs": "6.3.3",
     "tslib": "1.9.0",
     "zone.js": "0.8.26"
