--- a/angular.json
+++ b/angular.json
@@ -28,7 +28,8 @@
             ],
             "styles": [
               "src/styles.scss",
-              "./node_modules/nebular-icons/scss/nebular-icons.scss"
+              "./node_modules/nebular-icons/scss/nebular-icons.scss",
+              "./node_modules/bootstrap/dist/css/bootstrap.css"
             ],
             "scripts": []
           },
