--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compileOnSave": false,
   "compilerOptions": {
-    "baseUrl": "./",
+    "baseUrl": "src",
     "outDir": "./dist/out-tsc",
     "sourceMap": true,
     "declaration": false,
@@ -18,7 +18,7 @@
       "dom"
     ],
     "paths": {
-      "@nd/*": ["./src/app/*"]
+      "@nd/*": ["app/*"]
     }
   }
 }
