--- a/angular.json
+++ b/angular.json
@@ -138,5 +138,8 @@
       }
     }
   },
-  "defaultProject": "ngx-domoboard"
+  "defaultProject": "ngx-domoboard",
+  "cli": {
+    "defaultCollection": "@nativescript/schematics"
+  }
 }
