--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "@angular/forms": "7.2.11",
     "@angular/platform-browser": "7.2.11",
     "@angular/platform-browser-dynamic": "7.2.11",
+    "@angular/pwa": "^0.12.4",
     "@angular/router": "7.2.11",
+    "@angular/service-worker": "7.2.11",
     "@nebular/bootstrap": "3.4.1",
     "@nebular/theme": "3.4.1",
     "bootstrap": "4.3.1",
