--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@types/jasmine": "3.3.12",
     "@types/jasminewd2": "2.0.6",
     "@types/node": "11.12.2",
+    "angular-in-memory-web-api": "0.8.0",
     "codelyzer": "5.0.0",
     "jasmine-core": "3.3.0",
     "jasmine-spec-reporter": "4.2.1",
