--- a/package.json
+++ b/package.json
@@ -12,19 +12,19 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "7.2.11",
-    "@angular/cdk": "7.3.6",
-    "@angular/common": "7.2.11",
-    "@angular/compiler": "7.2.11",
-    "@angular/core": "7.2.11",
-    "@angular/forms": "7.2.11",
-    "@angular/platform-browser": "7.2.11",
-    "@angular/platform-browser-dynamic": "7.2.11",
-    "@angular/pwa": "^0.12.4",
-    "@angular/router": "7.2.11",
-    "@angular/service-worker": "7.2.11",
-    "@nebular/bootstrap": "3.4.1",
-    "@nebular/theme": "3.4.1",
+    "@angular/animations": "7.2.13",
+    "@angular/cdk": "7.3.7",
+    "@angular/common": "7.2.13",
+    "@angular/compiler": "7.2.13",
+    "@angular/core": "7.2.13",
+    "@angular/forms": "7.2.13",
+    "@angular/platform-browser": "7.2.13",
+    "@angular/platform-browser-dynamic": "7.2.13",
+    "@angular/pwa": "0.13.8",
+    "@angular/router": "7.2.13",
+    "@angular/service-worker": "7.2.13",
+    "@nebular/bootstrap": "3.5.0",
+    "@nebular/theme": "3.5.0",
     "bootstrap": "4.3.1",
     "core-js": "2.6.5",
     "nebular-icons": "1.1.0",
@@ -33,26 +33,30 @@
     "zone.js": "0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "0.13.7",
-    "@angular/cli": "7.3.7",
-    "@angular/compiler-cli": "7.2.11",
-    "@angular/language-service": "7.2.11",
-    "@schematics/angular": "7.3.7",
+    "@angular-devkit/build-angular": "0.13.8",
+    "@angular/cli": "7.3.8",
+    "@angular/compiler-cli": "7.2.13",
+    "@angular/language-service": "7.2.13",
+    "@cypress/webpack-preprocessor": "4.0.3",
+    "@schematics/angular": "7.3.8",
     "@types/jasmine": "3.3.12",
     "@types/jasminewd2": "2.0.6",
-    "@types/node": "11.12.2",
+    "@types/node": "11.13.5",
+    "angular2-template-loader": "0.6.2",
     "codelyzer": "5.0.0",
-    "cypress": "^3.2.0",
-    "jasmine-core": "3.3.0",
+    "cypress": "3.2.0",
+    "jasmine-core": "3.4.0",
     "jasmine-spec-reporter": "4.2.1",
-    "karma": "4.0.1",
+    "karma": "4.1.0",
     "karma-chrome-launcher": "2.2.0",
     "karma-coverage-istanbul-reporter": "2.0.5",
     "karma-jasmine": "2.0.1",
     "karma-jasmine-html-reporter": "1.4.0",
     "protractor": "5.4.2",
-    "ts-node": "8.0.3",
-    "tslint": "5.14.0",
+    "ts-loader": "5.3.3",
+    "ts-node": "8.1.0",
+    "tsconfig-paths-webpack-plugin": "3.2.0",
+    "tslint": "5.16.0",
     "typescript": "3.2.4"
   }
 }
