--- a/angular.json
+++ b/angular.json
@@ -32,7 +32,11 @@
               "./node_modules/nebular-icons/scss/nebular-icons.scss",
               "./node_modules/bootstrap/dist/css/bootstrap.css"
             ],
-            "scripts": []
+            "scripts": [
+              {
+                "input": "node_modules/document-register-element/build/document-register-element.js"
+              }
+            ]
           },
           "configurations": {
             "production": {
