--- a/package.json
+++ b/package.json
@@ -12,33 +12,33 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "7.2.13",
+    "@angular/animations": "8.0.0",
     "@angular/cdk": "7.3.7",
-    "@angular/common": "7.2.13",
-    "@angular/compiler": "7.2.13",
-    "@angular/core": "7.2.13",
-    "@angular/elements": "7.2.13",
-    "@angular/forms": "7.2.13",
-    "@angular/platform-browser": "7.2.13",
-    "@angular/platform-browser-dynamic": "7.2.13",
+    "@angular/common": "8.0.0",
+    "@angular/compiler": "8.0.0",
+    "@angular/core": "8.0.0",
+    "@angular/elements": "8.0.0",
+    "@angular/forms": "8.0.0",
+    "@angular/platform-browser": "8.0.0",
+    "@angular/platform-browser-dynamic": "8.0.0",
     "@angular/pwa": "0.13.8",
-    "@angular/router": "7.2.13",
-    "@angular/service-worker": "7.2.13",
+    "@angular/router": "8.0.0",
+    "@angular/service-worker": "8.0.0",
     "@nebular/bootstrap": "3.5.0",
     "@nebular/theme": "3.5.0",
     "bootstrap": "4.3.1",
     "core-js": "2.6.5",
+    "document-register-element": "1.7.2",
     "nebular-icons": "1.1.0",
-    "rxjs": "6.4.0",
+    "rxjs": "6.5.2",
     "tslib": "1.9.3",
-    "zone.js": "0.8.26",
-    "document-register-element": "1.7.2"
+    "zone.js": "0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "0.13.8",
-    "@angular/cli": "7.3.8",
-    "@angular/compiler-cli": "7.2.13",
-    "@angular/language-service": "7.2.13",
+    "@angular-devkit/build-angular": "0.800.1",
+    "@angular/cli": "8.0.1",
+    "@angular/compiler-cli": "8.0.0",
+    "@angular/language-service": "8.0.0",
     "@cypress/webpack-preprocessor": "4.0.3",
     "@schematics/angular": "7.3.8",
     "@types/jasmine": "3.3.12",
@@ -59,6 +59,6 @@
     "ts-node": "8.1.0",
     "tsconfig-paths-webpack-plugin": "3.2.0",
     "tslint": "5.16.0",
-    "typescript": "3.2.4"
+    "typescript": "3.4.5"
   }
 }
