--- a/angular.json
+++ b/angular.json
@@ -46,7 +46,7 @@
                   "with": "src/environments/environment.prod.ts"
                 }
               ],
-              "baseHref": "/ngx-domoboard/",
+              "baseHref": "https://6l3m.github.io/ngx-domoboard/",
               "optimization": true,
               "outputHashing": "all",
               "sourceMap": false,
