--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,49 +1,49 @@
 {
   "name": "ngx-domoboard",
   "short_name": "ngx-domoboard",
-  "theme_color": "#1976d2",
-  "background_color": "#fafafa",
+  "theme_color": "#7474bd",
+  "background_color": "#7474bd",
   "display": "standalone",
   "scope": "/",
   "start_url": "/ngx-domoboard",
   "icons": [
     {
-      "src": "assets/icons/icon-72x72.png",
+      "src": "assets/icons/nd-icon-72x72.png",
       "sizes": "72x72",
       "type": "image/png"
     },
     {
-      "src": "assets/icons/icon-96x96.png",
+      "src": "assets/icons/nd-icon-96x96.png",
       "sizes": "96x96",
       "type": "image/png"
     },
     {
-      "src": "assets/icons/icon-128x128.png",
+      "src": "assets/icons/nd-icon-128x128.png",
       "sizes": "128x128",
       "type": "image/png"
     },
     {
-      "src": "assets/icons/icon-144x144.png",
+      "src": "assets/icons/nd-icon-144x144.png",
       "sizes": "144x144",
       "type": "image/png"
     },
     {
-      "src": "assets/icons/icon-152x152.png",
+      "src": "assets/icons/nd-icon-152x152.png",
       "sizes": "152x152",
       "type": "image/png"
     },
     {
-      "src": "assets/icons/icon-192x192.png",
+      "src": "assets/icons/nd-icon-192x192.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "assets/icons/icon-384x384.png",
+      "src": "assets/icons/nd-icon-384x384.png",
       "sizes": "384x384",
       "type": "image/png"
     },
     {
-      "src": "assets/icons/icon-512x512.png",
+      "src": "assets/icons/nd-icon-512x512.png",
       "sizes": "512x512",
       "type": "image/png"
     }
