--- a/package.json
+++ b/package.json
@@ -25,10 +25,12 @@
     "@angular/router": "8.0.0",
     "@angular/service-worker": "8.0.0",
     "@nebular/bootstrap": "4.0.0",
+    "@nebular/eva-icons": "^4.0.0-rc.8",
     "@nebular/theme": "4.0.0",
     "bootstrap": "4.3.1",
     "core-js": "3.1.3",
     "document-register-element": "1.13.2",
+    "eva-icons": "^1.1.1",
     "nebular-icons": "1.1.0",
     "rxjs": "6.5.2",
     "tslib": "1.9.3",
