--- a/package.json
+++ b/package.json
@@ -5,10 +5,12 @@
     "ng": "ng",
     "start": "node version.js && ng serve",
     "build": "node version.js && ng build --configuration production",
+    "build:stats": "node version.js && ng build --configuration production --stats-json",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "cypress:open": "cypress open"
+    "cypress:open": "cypress open",
+    "analyze": "webpack-bundle-analyzer dist/ngx-domoboard/stats.json"
   },
   "private": true,
   "dependencies": {
@@ -25,12 +27,12 @@
     "@angular/router": "8.0.0",
     "@angular/service-worker": "8.0.0",
     "@nebular/bootstrap": "4.0.0",
-    "@nebular/eva-icons": "^4.0.0-rc.8",
+    "@nebular/eva-icons": "4.0.0-rc.8",
     "@nebular/theme": "4.0.0",
     "bootstrap": "4.3.1",
     "core-js": "3.1.3",
     "document-register-element": "1.13.2",
-    "eva-icons": "^1.1.1",
+    "eva-icons": "1.1.1",
     "nebular-icons": "1.1.0",
     "rxjs": "6.5.2",
     "tslib": "1.9.3",
@@ -61,6 +63,7 @@
     "ts-node": "8.2.0",
     "tsconfig-paths-webpack-plugin": "3.2.0",
     "tslint": "5.17.0",
-    "typescript": "3.4"
+    "typescript": "3.4",
+    "webpack-bundle-analyzer": "^3.3.2"
   }
 }
