wip options component

--- a/src/tsconfig.app.json
+++ b/src/tsconfig.app.json
@@ -10,5 +10,8 @@
     "**/*.tns.ts",
     "**/*.android.ts",
     "**/*.ios.ts"
-  ]
+  ],
+  "angularCompilerOptions": {
+    "enableIvy": false
+  }
 }
