--- a/package.json
+++ b/package.json
@@ -14,56 +14,57 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "8.0.0",
-    "@angular/cdk": "8.0.0",
-    "@angular/common": "8.0.0",
-    "@angular/compiler": "8.0.0",
-    "@angular/core": "8.0.0",
-    "@angular/elements": "8.0.0",
-    "@angular/forms": "8.0.0",
-    "@angular/platform-browser": "8.0.0",
-    "@angular/platform-browser-dynamic": "8.0.0",
-    "@angular/pwa": "0.800.1",
-    "@angular/router": "8.0.0",
-    "@angular/service-worker": "8.0.0",
-    "@nebular/bootstrap": "4.0.0",
-    "@nebular/eva-icons": "4.0.0-rc.8",
-    "@nebular/theme": "4.0.0",
+    "@angular/animations": "8.1.2",
+    "@angular/cdk": "8.1.1",
+    "@angular/common": "8.1.2",
+    "@angular/compiler": "8.1.2",
+    "@angular/core": "8.1.2",
+    "@angular/elements": "8.1.2",
+    "@angular/forms": "8.1.2",
+    "@angular/platform-browser": "8.1.2",
+    "@angular/platform-browser-dynamic": "8.1.2",
+    "@angular/pwa": "0.801.2",
+    "@angular/router": "8.1.2",
+    "@angular/service-worker": "8.1.2",
+    "@nebular/bootstrap": "4.1.2",
+    "@nebular/eva-icons": "4.1.2",
+    "@nebular/theme": "4.1.2",
     "bootstrap": "4.3.1",
-    "core-js": "3.1.3",
-    "document-register-element": "1.13.2",
+    "core-js": "3.1.4",
+    "document-register-element": "1.13.3",
     "eva-icons": "1.1.1",
     "nebular-icons": "1.1.0",
+    "pace-js": "1.0.2",
     "rxjs": "6.5.2",
-    "tslib": "1.9.3",
+    "tslib": "1.10.0",
     "zone.js": "0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "0.800.1",
-    "@angular/cli": "8.0.1",
-    "@angular/compiler-cli": "8.0.0",
-    "@angular/language-service": "8.0.0",
-    "@cypress/webpack-preprocessor": "4.0.4",
-    "@schematics/angular": "8.0.1",
+    "@angular-devkit/build-angular": "0.801.2",
+    "@angular/cli": "8.1.2",
+    "@angular/compiler-cli": "8.1.2",
+    "@angular/language-service": "8.1.2",
+    "@cypress/webpack-preprocessor": "4.1.0",
+    "@schematics/angular": "8.1.2",
     "@types/jasmine": "3.3.13",
     "@types/jasminewd2": "2.0.6",
-    "@types/node": "12.0.4",
+    "@types/node": "12.6.8",
     "angular2-template-loader": "0.6.2",
     "codelyzer": "5.1.0",
-    "cypress": "3.3.1",
+    "cypress": "^3.4.0",
     "jasmine-core": "3.4.0",
     "jasmine-spec-reporter": "4.2.1",
-    "karma": "4.1.0",
-    "karma-chrome-launcher": "2.2.0",
+    "karma": "4.2.0",
+    "karma-chrome-launcher": "3.0.0",
     "karma-coverage-istanbul-reporter": "2.0.5",
     "karma-jasmine": "2.0.1",
     "karma-jasmine-html-reporter": "1.4.2",
     "protractor": "5.4.2",
-    "ts-loader": "6.0.2",
-    "ts-node": "8.2.0",
+    "ts-loader": "6.0.4",
+    "ts-node": "8.3.0",
     "tsconfig-paths-webpack-plugin": "3.2.0",
-    "tslint": "5.17.0",
+    "tslint": "5.18.0",
     "typescript": "3.4",
-    "webpack-bundle-analyzer": "^3.3.2"
+    "webpack-bundle-analyzer": "3.3.2"
   }
 }
