--- a/angular.json
+++ b/angular.json
@@ -24,7 +24,7 @@
             "tsConfig": "src/tsconfig.app.json",
             "assets": [
               "src/favicon.ico",
-              "src/assets",
+              "src/assets/icons",
               "src/manifest.json"
             ],
             "styles": [
