--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@angular/pwa": "0.801.2",
     "@angular/router": "8.1.2",
     "@angular/service-worker": "8.1.2",
+    "@jaames/iro": "4.5.1",
     "@nebular/bootstrap": "4.1.2",
     "@nebular/eva-icons": "4.1.2",
     "@nebular/theme": "4.1.2",
@@ -51,7 +52,7 @@
     "@types/node": "12.6.8",
     "angular2-template-loader": "0.6.2",
     "codelyzer": "5.1.0",
-    "cypress": "^3.4.0",
+    "cypress": "3.4.1",
     "jasmine-core": "3.4.0",
     "jasmine-spec-reporter": "4.2.1",
     "karma": "4.2.0",
