--- a/package.json
+++ b/package.json
@@ -15,25 +15,25 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "8.1.2",
-    "@angular/cdk": "8.1.1",
-    "@angular/common": "8.1.2",
-    "@angular/compiler": "8.1.2",
-    "@angular/core": "8.1.2",
-    "@angular/elements": "8.1.2",
-    "@angular/forms": "8.1.2",
-    "@angular/platform-browser": "8.1.2",
-    "@angular/platform-browser-dynamic": "8.1.2",
-    "@angular/pwa": "0.801.2",
-    "@angular/router": "8.1.2",
-    "@angular/service-worker": "8.1.2",
+    "@angular/animations": "8.2.4",
+    "@angular/cdk": "8.1.4",
+    "@angular/common": "8.2.4",
+    "@angular/compiler": "8.2.4",
+    "@angular/core": "8.2.4",
+    "@angular/elements": "8.2.4",
+    "@angular/forms": "8.2.4",
+    "@angular/platform-browser": "8.2.4",
+    "@angular/platform-browser-dynamic": "8.2.4",
+    "@angular/pwa": "0.803.2",
+    "@angular/router": "8.2.4",
+    "@angular/service-worker": "8.2.4",
     "@jaames/iro": "4.5.1",
-    "@nebular/bootstrap": "4.1.2",
-    "@nebular/eva-icons": "4.1.2",
-    "@nebular/theme": "4.1.2",
+    "@nebular/bootstrap": "4.2.1",
+    "@nebular/eva-icons": "4.2.1",
+    "@nebular/theme": "4.2.1",
     "bootstrap": "4.3.1",
-    "core-js": "3.1.4",
-    "document-register-element": "1.13.3",
+    "document-register-element": "1.14.3",
+    "echarts": "4.2.1",
     "eva-icons": "1.1.1",
     "nebular-icons": "1.1.0",
     "pace-js": "1.0.2",
@@ -42,31 +42,31 @@
     "zone.js": "0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "0.801.2",
-    "@angular/cli": "8.1.2",
-    "@angular/compiler-cli": "8.1.2",
-    "@angular/language-service": "8.1.2",
+    "@angular-devkit/build-angular": "0.803.2",
+    "@angular/cli": "8.3.2",
+    "@angular/compiler-cli": "8.2.4",
+    "@angular/language-service": "8.2.4",
     "@cypress/webpack-preprocessor": "4.1.0",
-    "@schematics/angular": "8.1.2",
-    "@types/jasmine": "3.3.13",
+    "@schematics/angular": "8.3.2",
+    "@types/jasmine": "3.4.0",
     "@types/jasminewd2": "2.0.6",
-    "@types/node": "12.6.8",
+    "@types/node": "12.7.3",
     "angular2-template-loader": "0.6.2",
     "codelyzer": "5.1.0",
     "cypress": "3.4.1",
     "jasmine-core": "3.4.0",
     "jasmine-spec-reporter": "4.2.1",
-    "karma": "4.2.0",
-    "karma-chrome-launcher": "3.0.0",
-    "karma-coverage-istanbul-reporter": "2.0.5",
+    "karma": "4.3.0",
+    "karma-chrome-launcher": "3.1.0",
+    "karma-coverage-istanbul-reporter": "2.1.0",
     "karma-jasmine": "2.0.1",
     "karma-jasmine-html-reporter": "1.4.2",
     "protractor": "5.4.2",
     "ts-loader": "6.0.4",
     "ts-node": "8.3.0",
     "tsconfig-paths-webpack-plugin": "3.2.0",
-    "tslint": "5.18.0",
-    "typescript": "3.4",
-    "webpack-bundle-analyzer": "3.3.2"
+    "tslint": "5.19.0",
+    "typescript": "3.5",
+    "webpack-bundle-analyzer": "3.4.1"
   }
 }
