--- a/angular.json
+++ b/angular.json
@@ -75,6 +75,12 @@
               "scripts": [
                 {
                   "input": "./fathom.js"
+                },
+                {
+                  "input": "./pace-options.js"
+                },
+                {
+                  "input": "./node_modules/pace-js/pace.js"
                 }
               ]
             },
