--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,7 @@
 {
-  "workbench.colorCustomizations": {}
+  "workbench.colorCustomizations": {},
+  "editor.formatOnSave": true,
+  "emojisense.languages": {
+    "typescript": true
+  }
 }
