--- a/package.json
+++ b/package.json
@@ -15,58 +15,57 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "8.2.14",
-    "@angular/cdk": "8.2.3",
-    "@angular/common": "8.2.14",
-    "@angular/compiler": "8.2.14",
-    "@angular/core": "8.2.14",
-    "@angular/elements": "8.2.14",
-    "@angular/forms": "8.2.14",
-    "@angular/platform-browser": "8.2.14",
-    "@angular/platform-browser-dynamic": "8.2.14",
-    "@angular/pwa": "0.803.19",
-    "@angular/router": "8.2.14",
-    "@angular/service-worker": "8.2.14",
-    "@jaames/iro": "4.5.3",
-    "@nebular/bootstrap": "4.5.0",
-    "@nebular/eva-icons": "4.5.0",
-    "@nebular/theme": "4.5.0",
-    "bootstrap": "4.3.1",
+    "@angular/animations": "9.0.0",
+    "@angular/cdk": "9.0.0",
+    "@angular/common": "9.0.0",
+    "@angular/compiler": "9.0.0",
+    "@angular/core": "9.0.0",
+    "@angular/elements": "9.0.0",
+    "@angular/forms": "9.0.0",
+    "@angular/platform-browser": "9.0.0",
+    "@angular/platform-browser-dynamic": "9.0.0",
+    "@angular/router": "9.0.0",
+    "@angular/service-worker": "9.0.0",
+    "@jaames/iro": "5.0.0",
+    "@nebular/bootstrap": "4.6.0",
+    "@nebular/eva-icons": "4.6.0",
+    "@nebular/theme": "4.6.0",
+    "bootstrap": "4.4.1",
     "document-register-element": "1.14.3",
-    "echarts": "4.5.0",
+    "echarts": "4.6.0",
     "eva-icons": "1.1.2",
     "nebular-icons": "1.1.0",
     "pace-js": "1.0.2",
-    "rxjs": "6.5.3",
-    "tslib": "1.10.0",
-    "zone.js": "0.9.1"
+    "rxjs": "6.5.4",
+    "tslib": "^1.10.0",
+    "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "0.803.19",
-    "@angular/cli": "8.3.19",
-    "@angular/compiler-cli": "8.2.14",
-    "@angular/language-service": "8.2.14",
+    "@angular-devkit/build-angular": "~0.900.1",
+    "@angular/cli": "9.0.1",
+    "@angular/compiler-cli": "9.0.0",
+    "@angular/language-service": "9.0.0",
     "@cypress/webpack-preprocessor": "4.1.1",
-    "@schematics/angular": "8.3.19",
-    "@types/jasmine": "3.4.6",
+    "@schematics/angular": "9.0.1",
+    "@types/jasmine": "3.5.3",
     "@types/jasminewd2": "2.0.8",
-    "@types/node": "12.12.11",
+    "@types/node": "^13.7.0",
     "angular2-template-loader": "0.6.2",
-    "codelyzer": "5.2.0",
-    "cypress": "3.6.1",
+    "codelyzer": "^5.2.1",
+    "cypress": "4.0.1",
     "jasmine-core": "3.5.0",
     "jasmine-spec-reporter": "4.2.1",
     "karma": "4.4.1",
     "karma-chrome-launcher": "3.1.0",
     "karma-coverage-istanbul-reporter": "2.1.1",
-    "karma-jasmine": "2.0.1",
-    "karma-jasmine-html-reporter": "1.4.2",
-    "protractor": "5.4.2",
+    "karma-jasmine": "3.1.0",
+    "karma-jasmine-html-reporter": "1.5.2",
+    "protractor": "5.4.3",
     "ts-loader": "6.2.1",
-    "ts-node": "8.5.2",
+    "ts-node": "8.6.2",
     "tsconfig-paths-webpack-plugin": "3.2.0",
-    "tslint": "5.20.1",
-    "typescript": "3.5",
+    "tslint": "6.0.0",
+    "typescript": "3.7.5",
     "webpack-bundle-analyzer": "3.6.0"
   }
 }
