1.Add date/time and sun set/rise bar; 2. Refine blinds control; 3.Dump out humidity sensor; 4. Add Dashboard, scene and utility mune in navigation.

--- a/angular.json
+++ b/angular.json
@@ -201,6 +201,7 @@
   },
   "defaultProject": "ngx-domoboard",
   "cli": {
-    "defaultCollection": "@nativescript/schematics"
+    "defaultCollection": "@nativescript/schematics",
+    "analytics": "3c4eed1d-a250-4e4e-a301-ae90e1a77caf"
   }
 }
