--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
     "@types/node": "^13.7.0",
     "angular2-template-loader": "0.6.2",
     "codelyzer": "^5.2.1",
-    "cypress": "4.0.1",
+    "cypress": "^4.3.0",
     "jasmine-core": "3.5.0",
     "jasmine-spec-reporter": "4.2.1",
     "karma": "4.4.1",
